--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
     display: flex;
     width: 100%;
     justify-content: center;
+    
 }
 .news-blocks{
     display: grid;
@@ -140,4 +141,5 @@ body {
 .news-block{
     width: 100%;
     border: 2px solid black;
+    float: ;
 }
