--- a/style.css
+++ b/style.css
@@ -465,3 +465,19 @@ body {
     width: 30%;
     height: fit-content;
 }
+
+
+
+
+/* CARDS */
+
+
+
+
+.cards-title{
+    color: #5080D7; 
+    text-align: center; 
+    font-weight: bold; 
+    font-size: 20px; 
+    margin: 0;
+}
