--- a/style.css
+++ b/style.css
@@ -481,3 +481,74 @@ body {
     font-size: 20px; 
     margin: 0;
 }
+.cards-section{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    margin: 0 0 50px 0;
+    
+}
+.cards{
+    width: 80%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    border: 2px solid #5080D7;
+    padding: 25px;
+    row-gap: 25px;
+}
+.modalwin{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    transition: 0.3 ease;
+    opacity: 0;
+}
+.modalwin.show{
+    opacity: 1;
+}
+.modalwin.show .modal{
+    transform: translateY(0);
+    opacity: 1;
+}
+.modal{
+    background: white;
+    padding: 20px 30px;
+    border-radius: 10px;
+    max-width: 400px;
+    opacity: 0;
+    transform:translateY(-20px);
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+.card{
+    width: 100%;
+    height: 200px;
+    border: 2px solid #5080D7;
+    display: flex;
+    justify-content: space-between;
+}
+.card img{
+    width: 150px;
+}
+.card p{
+    font-size: 25px;
+    margin: 0;
+}
+.card button{
+    width: 90px;
+    height: 40px;
+    border: none;
+    background-color: #5080D7;
+    border-radius: 10px;
+    color: white;
+    font-size: 17px;
+}
