--- a/style.css
+++ b/style.css
@@ -495,44 +495,108 @@ body {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     border: 2px solid #5080D7;
+    border-radius: 10px;
     padding: 25px;
     row-gap: 25px;
 }
-.modalwin{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: none;
-    background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(5px);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    transition: 0.3 ease;
-    opacity: 0;
-}
-.modalwin.show{
-    opacity: 1;
-}
-.modalwin.show .modal{
-    transform: translateY(0);
-    opacity: 1;
-}
-.modal{
-    background: white;
-    padding: 20px 30px;
+
+.openbtn{
+    border: none;
     border-radius: 10px;
-    max-width: 400px;
-    opacity: 0;
-    transform:translateY(-20px);
-    transition: transform 0.3s ease, opacity 0.3s ease;
+    color: white;
+    background-color: #5080D7;
+    height: 30px;
+    font-size: 17px;
+}
+
+.modalwin {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex; /* не убираем, иначе justify/align не работают */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  pointer-events: none; /* чтобы нельзя было кликнуть, когда скрыто */
+  transition: opacity 0.3s ease; /* нужно указать конкретное свойство */
+  z-index: 1000;
+}
+
+.modalwin.show {
+  opacity: 1;
+  pointer-events: all; /* включаем клики */
+}
+
+.modal {
+  background: white;
+  padding: 20px 30px;
+  border-radius: 10px;
+  max-width: 400px;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.modalwin.show .modal {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.modal-head p {
+    color: #5080D7;
+    text-align: center;
+    margin: 0;
+}
+
+.modal-form{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+}
+
+.modal-input input{
+    border: 2px solid #5080D7;
+    border-radius: 5px;
+}
+
+.modal-input p{
+    margin: 10px 0 5px 0;
+}
+
+.modal-footer{
+    display: flex;
+    justify-content: center;
+    margin: 15px 0 0 0;
+}
+
+.modal-footer button{
+    background-color: #5080D7;
+    border: none;
+    border-radius: 15px;
+    color: white;
+    font-size: 17px;
+    width: 100px;
+    height: 40px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background: transparent;
+  font-size: 18px;
+  cursor: pointer;
 }
 .card{
     width: 100%;
     height: 200px;
     border: 2px solid #5080D7;
+    border-radius: 10px;
     display: flex;
     justify-content: space-between;
 }
@@ -551,4 +615,18 @@ body {
     border-radius: 10px;
     color: white;
     font-size: 17px;
+}
+
+
+
+
+/* RENT-HISTORY */
+
+
+
+
+.rent-history{
+    width: 80%;
+    height: fit-content;
+    justify-content: center;
 }
